--- a/index.html
+++ b/index.html
@@ -1,124 +1,348 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-<meta charset="UTF-8">
-<title>Salchi Puzzle Game</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin-top: 20px;
-  }
-  #puzzle {
-    width: 400px;
-    height: 400px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(4, 100px);
-    grid-template-rows: repeat(4, 100px);
-    gap: 2px;
-  }
-  .tile {
-    width: 100px;
-    height: 100px;
-    background-image: url("salchi.jpg");
-    background-size: 400px 400px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    color: #fff;
-    border: 1px solid #000;
-  }
-  .empty {
-    background: #eee;
-    border: none;
-  }
-  #reset {
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 16px;
-  }
-</style>
+    <meta charset="UTF-8">
+    <title>Salchi Puzzle Game</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        /* Estilos Generales */
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+
+        h1 {
+            margin: 20px 0;
+            font-size: 2em;
+        }
+
+        /* Contenedor de la Imagen Completa */
+        #image-container {
+            width: 90%;
+            max-width: 400px;
+            aspect-ratio: 1 / 1;
+            margin: 0 auto;
+            background-image: url("salchi.jpg");
+            background-size: cover;
+            background-position: center;
+            border: 2px solid #000;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Contenedor del Puzzle */
+        #puzzle {
+            width: 90%;
+            max-width: 400px;
+            aspect-ratio: 1 / 1;
+            margin: 20px auto;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(4, 1fr);
+            gap: 2px;
+            display: none;
+            /* Oculto inicialmente */
+        }
+
+        /* Estilos de las Piezas */
+        .tile {
+            background-image: url("salchi.jpg");
+            background-size: 400px 400px;
+            background-repeat: no-repeat;
+            position: relative;
+            /* Para posicionar el número */
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid #000;
+            border-radius: 5px;
+            box-sizing: border-box;
+            user-select: none;
+            transition: transform 0.2s;
+        }
+
+        .tile:active {
+            transform: scale(0.95);
+        }
+
+        .tile span.number {
+            position: absolute;
+            top: 5px;
+            left: 5px;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 2px 5px;
+            border-radius: 3px;
+            font-size: 14px;
+            color: #fff;
+        }
+
+        .empty {
+            background: #eee;
+            border: none;
+            cursor: default;
+        }
+
+        /* Controles */
+        #controls {
+            margin: 20px 0;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 1em;
+            margin: 5px;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+            background-color: #007BFF;
+            color: #fff;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        button:active {
+            background-color: #00408d;
+        }
+
+        /* Responsive */
+        @media (max-width: 500px) {
+            h1 {
+                font-size: 1.5em;
+            }
+
+            button {
+                width: 80%;
+                max-width: 200px;
+            }
+        }
+    </style>
 </head>
+
 <body>
 
-<h1>Salchi Puzzle Game</h1>
-<div id="puzzle"></div>
-<button id="reset">Reset</button>
+    <h1>15 Puzzle Game</h1>
 
-<script>
-  const puzzle = document.getElementById('puzzle');
-  const resetButton = document.getElementById('reset');
-  let tiles = [];
-  let emptyIndex = 15;
+    <!-- Contenedor de la imagen completa -->
+    <div id="image-container"></div>
 
-  function initPuzzle() {
-    tiles = [];
-    puzzle.innerHTML = '';
-    let numbers = [...Array(15).keys()];
-    shuffleArray(numbers);
-    for (let i = 0; i < 16; i++) {
-      const tile = document.createElement('div');
-      tile.classList.add('tile');
-      if (i === 15) {
-        tile.classList.add('empty');
-      } else {
-        const num = numbers.pop() + 1;
-        tile.style.backgroundPosition = `${-(num - 1) % 4 * 100}px ${-Math.floor((num - 1) / 4) * 100}px`;
-        tile.dataset.index = num - 1;
-      }
-      tiles.push(tile);
-      puzzle.appendChild(tile);
-    }
-    emptyIndex = 15;
-  }
+    <!-- Contenedor del puzzle -->
+    <div id="puzzle"></div>
 
-  function shuffleArray(array) {
-    for (let i = array.length - 1; i > 0; i--) {
-      const j = Math.floor(Math.random() * (i + 1));
-      [array[i], array[j]] = [array[j], array[i]];
-    }
-  }
+    <!-- Controles -->
+    <div id="controls">
+        <button id="play">Play</button>
+        <button id="reset">Reset</button>
+    </div>
 
-  function moveTile(direction) {
-    const targetIndex = getTargetIndex(direction);
-    if (targetIndex !== -1) {
-      [tiles[emptyIndex], tiles[targetIndex]] = [tiles[targetIndex], tiles[emptyIndex]];
-      puzzle.innerHTML = '';
-      tiles.forEach(tile => puzzle.appendChild(tile));
-      emptyIndex = targetIndex;
-    }
-  }
+    <script>
+        const puzzle = document.getElementById('puzzle');
+        const imageContainer = document.getElementById('image-container');
+        const playButton = document.getElementById('play');
+        const resetButton = document.getElementById('reset');
+        let tiles = [];
+        let emptyIndex = 15;
 
-  function getTargetIndex(direction) {
-    let target;
-    switch (direction) {
-      case 'ArrowUp':
-        target = emptyIndex + 4;
-        return target < 16 ? target : -1;
-      case 'ArrowDown':
-        target = emptyIndex - 4;
-        return target >= 0 ? target : -1;
-      case 'ArrowLeft':
-        target = emptyIndex + 1;
-        return emptyIndex % 4 !== 3 ? target : -1;
-      case 'ArrowRight':
-        target = emptyIndex - 1;
-        return emptyIndex % 4 !== 0 ? target : -1;
-      default:
-        return -1;
-    }
-  }
+        // Inicializa el puzzle en estado resuelto
+        function initPuzzle() {
+            tiles = [];
+            puzzle.innerHTML = '';
+            for (let i = 0; i < 16; i++) {
+                const tile = document.createElement('div');
+                tile.classList.add('tile');
+                if (i === 15) {
+                    tile.classList.add('empty');
+                } else {
+                    tile.style.backgroundPosition = `${-(i % 4) * 100}px ${-Math.floor(i / 4) * 100}px`;
+                    tile.dataset.index = i;
 
-  document.addEventListener('keydown', (e) => {
-    moveTile(e.key);
-  });
+                    // Crear y añadir el número a la pieza
+                    const numberSpan = document.createElement('span');
+                    numberSpan.classList.add('number');
+                    numberSpan.textContent = i + 1;
+                    tile.appendChild(numberSpan);
+                }
+                tiles.push(tile);
+                puzzle.appendChild(tile);
+            }
+            emptyIndex = 15;
+        }
 
-  resetButton.addEventListener('click', initPuzzle);
+        // Baraja el puzzle asegurando que sea resolvible
+        function shufflePuzzle() {
+            let numbers = [...Array(15).keys()];
+            shuffleArray(numbers);
 
-  initPuzzle();
-</script>
+            // Verifica que el puzzle sea resolvible
+            while (!isSolvable(numbers)) {
+                shuffleArray(numbers);  // Vuelve a barajar si no es resolvible
+            }
+
+            tiles = [];
+            puzzle.innerHTML = '';
+            for (let i = 0; i < 16; i++) {
+                const tile = document.createElement('div');
+                tile.classList.add('tile');
+                if (i === 15) {
+                    tile.classList.add('empty');
+                } else {
+                    const num = numbers.pop() + 1;
+                    tile.style.backgroundPosition = `${-((num - 1) % 4) * 100}px ${-Math.floor((num - 1) / 4) * 100}px`;
+                    tile.dataset.index = num - 1;
+
+                    // Crear y añadir el número a la pieza
+                    const numberSpan = document.createElement('span');
+                    numberSpan.classList.add('number');
+                    numberSpan.textContent = num;
+                    tile.appendChild(numberSpan);
+                }
+                tiles.push(tile);
+                puzzle.appendChild(tile);
+            }
+            emptyIndex = 15;
+        }
+
+        function isSolvable(array) {
+            const DIM = 4;
+
+            let inversionSum = 0;  // If this sum is even it is solvable
+            for (let i = 0; i < array.length; i++) {
+                // For empty square add row number to inversionSum                
+                if (array[i] === 0) {
+                    inversionSum += (Math.floor(i / DIM) + 1);  // Add Row number
+                    continue;
+                }
+
+                let count = 0;
+                for (let j = i + 1; j < array.length; j++) {
+                    // No need to count for empty square
+                    if (array[j] === 0) {
+                        continue;
+                    } else if (array[i] > array[j]) { // If any element greater 
+                        count++;                    // than seed, increase the
+                    }                               // inversionSum                    
+                }
+                inversionSum += count;
+            }
+
+            // if inversionSum is even return true, otherwise false
+            return (inversionSum % 2 === 0);
+        }
+
+        // Función para barajar un array
+        function shuffleArray(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+        }
+
+
+        // Mueve una pieza si es válido
+        function moveTile(direction) {
+            const targetIndex = getTargetIndex(direction);
+            if (targetIndex !== -1) {
+                [tiles[emptyIndex], tiles[targetIndex]] = [tiles[targetIndex], tiles[emptyIndex]];
+                updatePuzzle();
+                emptyIndex = targetIndex;
+                checkWin();
+            }
+        }
+
+        // Obtiene el índice objetivo según la dirección
+        function getTargetIndex(direction) {
+            let target;
+            switch (direction) {
+                case 'ArrowUp':
+                    target = emptyIndex + 4;
+                    return target < 16 ? target : -1;
+                case 'ArrowDown':
+                    target = emptyIndex - 4;
+                    return target >= 0 ? target : -1;
+                case 'ArrowLeft':
+                    target = emptyIndex + 1;
+                    return emptyIndex % 4 !== 3 ? target : -1;
+                case 'ArrowRight':
+                    target = emptyIndex - 1;
+                    return emptyIndex % 4 !== 0 ? target : -1;
+                default:
+                    return -1;
+            }
+        }
+
+        // Actualiza el DOM del puzzle
+        function updatePuzzle() {
+            puzzle.innerHTML = '';
+            tiles.forEach(tile => puzzle.appendChild(tile));
+        }
+
+        // Maneja el evento de teclado para mover piezas
+        document.addEventListener('keydown', (e) => {
+            moveTile(e.key);
+        });
+
+        // Maneja el evento de clic y toque en las piezas para moverlas
+        function handleTileInteraction(e) {
+            const clickedTile = e.target.closest('.tile');
+            if (!clickedTile || clickedTile.classList.contains('empty')) return;
+
+            const clickedIndex = tiles.indexOf(clickedTile);
+            if (clickedIndex === -1) return;
+
+            const rowEmpty = Math.floor(emptyIndex / 4);
+            const colEmpty = emptyIndex % 4;
+            const rowClicked = Math.floor(clickedIndex / 4);
+            const colClicked = clickedIndex % 4;
+            const distance = Math.abs(rowEmpty - rowClicked) + Math.abs(colEmpty - colClicked);
+            if (distance === 1) {
+                [tiles[emptyIndex], tiles[clickedIndex]] = [tiles[clickedIndex], tiles[emptyIndex]];
+                updatePuzzle();
+                emptyIndex = clickedIndex;
+                checkWin();
+            }
+        }
+
+        // Soporte para eventos de clic y toque
+        puzzle.addEventListener('click', handleTileInteraction);
+        puzzle.addEventListener('touchend', handleTileInteraction);
+
+        // Verifica si el jugador ha resuelto el puzzle
+        function checkWin() {
+            for (let i = 0; i < 15; i++) {
+                if (tiles[i].dataset.index != i) {
+                    return;
+                }
+            }
+            setTimeout(() => alert("¡Felicidades! Has resuelto el puzzle."), 100);
+        }
+
+        // Maneja el botón Play
+        playButton.addEventListener('click', () => {
+            imageContainer.style.display = 'none';
+            puzzle.style.display = 'grid';
+            shufflePuzzle();
+            playButton.style.display = 'none';
+        });
+
+        // Maneja el botón Reset
+        resetButton.addEventListener('click', () => {
+            puzzle.style.display = 'none';
+            imageContainer.style.display = 'block';
+            initPuzzle();
+            playButton.style.display = 'inline-block';
+        });
+
+        // Inicializa el puzzle en estado resuelto
+        initPuzzle();
+    </script>
 
 </body>
+
 </html>
